Fixed synchronicity and revamped some types, added jvm options for testing